Added margin to main blueprint

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container mt-3">
 
         <!-- Navbar start -->
-        <ul class="nav nav-pills nav-fill">
+        <ul class="nav nav-pills nav-fill mb-3">
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('home')}}">Home</a>
             </li>
