--- a/templates/data_selection/index_data_selection.html
+++ b/templates/data_selection/index_data_selection.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Import data{% endblock %}
+{% block title %}Data selection{% endblock %}
 {% block main_content %}
-Inside import data
+Inside data selection
 {% endblock %}
