Added import functionality that saves files

--- a/templates/data_selection/import_new_dataset.html
+++ b/templates/data_selection/import_new_dataset.html
@@ -3,18 +3,18 @@
 {% block title %}Data selection - Import new dataset{% endblock %}
 {% block main_content %}
 
-<form action="#" method="POST">
+<form action="#" method="POST" enctype=multipart/form-data>
   <div class="mb-3">
-    <label for="new_file_name" class="form-label">File name</label>
-    <input type="text" class="form-control" name="new_file_name" id="new_file_name" placeholder="Leave empty if you do not wish to change the name of the file">
+    <label for="file_name_new" class="form-label">File name</label>
+    <input type="text" class="form-control" name="file_name_new" id="file_name_new" placeholder="Leave empty if you do not wish to change the name of the file. Add the file extension as well.">
   </div>
   <div class="mb-3">
-    <label for="new_file_input" class="form-label">File</label>
-    <input type="file" class="form-control" name="new_file_input" id="new_file_input" required>
+    <label for="file_input" class="form-label">File</label>
+    <input type="file" class="form-control" name="file_input" id="file_input" required>
   </div>
     <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" name="new_file_as_active" id="new_file_as_active" checked>
-    <label class="form-check-label" for="new_file_as_active">Set as active dataset</label>
+    <input type="checkbox" class="form-check-input" name="is_new_file_active" id="is_new_file_active" checked>
+    <label class="form-check-label" for="is_new_file_active">Set as active dataset</label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
