Added select_dataset_as_active functionality

--- a/templates/data_selection/import_new_dataset.html
+++ b/templates/data_selection/import_new_dataset.html
@@ -16,7 +16,7 @@
     <input type="checkbox" class="form-check-input" name="is_new_file_active" id="is_new_file_active" checked>
     <label class="form-check-label" for="is_new_file_active">Set as active dataset (Does not work yet)</label>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Upload file</button>
 </form>
 
 {% endblock %}
