--- a/templates/data_selection/select_dataset_as_active.html
+++ b/templates/data_selection/select_dataset_as_active.html
@@ -3,6 +3,15 @@
 {% block title %}Data selection - Select dataset as active{% endblock %}
 {% block main_content %}
 
+<form action="#" method="POST" enctype=multipart/form-data>
+    <select class="form-select" name="new_active_dataset" aria-label="Default select example">
+        <option selected value="">None</option>
+        {% for file in additional_args[0] %}
+            <option value="{{file}}">{{file}}</option>
+        {% endfor %}
+    </select>
+    <button type="submit" class="btn btn-primary mt-3">Select as new active dataset</button>
+</form>
 
 
 {% endblock %}
