--- a/templates/data_selection/index_data_selection.html
+++ b/templates/data_selection/index_data_selection.html
@@ -2,5 +2,37 @@
 
 {% block title %}Data selection{% endblock %}
 {% block main_content %}
-Inside data selection
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus, lacus sed euismod suscipit, ipsum dui
+    laoreet mi, nec dictum turpis ipsum ac ex. Nunc ullamcorper diam nec ante euismod ultrices. Suspendisse blandit
+    egestas sapien. Fusce vitae finibus lectus. Nullam ut pellentesque lacus. Proin molestie pulvinar luctus. Donec
+    lacinia sapien felis. Integer imperdiet posuere lacus, fringilla varius tellus imperdiet ut. Etiam vel eleifend
+    lectus. Donec viverra cursus aliquet. Proin id auctor elit. Duis accumsan volutpat ipsum, vel commodo nibh volutpat
+    ut. Cras id orci sem.</p>
+
+<p> Nulla facilisi. Maecenas sollicitudin augue sed nisi lacinia, eget porttitor risus finibus. Sed dapibus convallis
+    nunc, eget lacinia justo consequat nec. Aenean et posuere erat. Nam mi lectus, molestie non magna ac, auctor
+    pellentesque eros. Nulla accumsan magna odio, quis tristique elit porttitor dictum. Integer molestie felis mi, ut
+    maximus dui suscipit sed. Mauris nec massa sit amet arcu pulvinar placerat. Curabitur tincidunt egestas ipsum.
+    Pellentesque ac massa arcu. Duis libero mi, posuere a dignissim vitae, volutpat eget ante. Donec et vehicula orci.
+</p>
+<p>
+    Ut sodales leo vitae nisi consequat dictum. Donec porta molestie hendrerit. Curabitur ex lectus, efficitur in lacus
+    eu, tempus vulputate turpis. Morbi orci ipsum, tincidunt in malesuada sed, posuere vitae risus. Nam sollicitudin,
+    eros quis aliquet feugiat, nulla orci tempor dolor, et iaculis velit massa quis purus. Maecenas nec ipsum sit amet
+    erat volutpat auctor. Nullam vulputate, velit non luctus mollis, erat lectus cursus neque, nec euismod urna est
+    vitae ante. Aliquam erat volutpat.
+</p>
+<p>
+    Proin in lacus sit amet arcu tristique semper. Suspendisse vehicula elit nec lacus aliquam pulvinar. Nullam volutpat
+    pulvinar efficitur. Nam in risus non magna suscipit aliquam. Praesent eget luctus erat. Praesent mollis, sem a
+    dictum cursus, erat lorem dignissim ipsum, sit amet mollis enim quam in dui. Phasellus lacinia laoreet urna non
+    mattis. In hac habitasse platea dictumst.
+</p>
+<p>
+    Vivamus et metus vitae metus pellentesque consectetur non vitae lorem. Ut nec urna mollis, fermentum augue id,
+    egestas leo. Suspendisse potenti. Curabitur vitae interdum eros, in finibus felis. Vestibulum ante ipsum primis in
+    faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum in porta tellus, et aliquam urna. Vivamus sodales
+    efficitur fermentum. Maecenas volutpat pellentesque sem non pharetra.
+</p>
 {% endblock %}
