--- a/templates/data_selection/import_new_dataset.html
+++ b/templates/data_selection/import_new_dataset.html
@@ -14,7 +14,7 @@
   </div>
     <div class="mb-3 form-check">
     <input type="checkbox" class="form-check-input" name="is_new_file_active" id="is_new_file_active" checked>
-    <label class="form-check-label" for="is_new_file_active">Set as active dataset (Does not work yet)</label>
+    <label class="form-check-label" for="is_new_file_active">Set as active dataset</label>
   </div>
   <button type="submit" class="btn btn-primary">Upload file</button>
 </form>
