Added display tables

--- a/templates/data_preparation/manual_repairing.html
+++ b/templates/data_preparation/manual_repairing.html
@@ -3,7 +3,6 @@
 {% block title %}Data preparation - Manual repairing{% endblock %}
 {% block main_content %}
 
-{{additional_args}}
+{% include "table_display_include.html" %}
 
-Inside manual_repairing
 {% endblock %}
