correct flash intendation

--- a/templates/table_display_include.html
+++ b/templates/table_display_include.html
@@ -1,4 +1,4 @@
-<table id="data" class="table table-striped display_table">
+<table id="data" class="table table-dark table-striped display_table">
     <thead>
         <tr>
             {% for column_name in additional_args[0][0].keys() %}
