--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -21,7 +21,7 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <!-- My js -->
-    <script src="{{ url_for('static', filename='js/my_js.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/my_js.js')}}" type="text/javascript"></script>
 
 
 </head>
