--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -118,7 +118,7 @@
             {% if messages %}
             <ul class="list-group flashed_messages">
                 {% for category, message in messages %}
-                <li class="list-group-item bg-{{ category }}-subtle text-light-emphasis border border-light-subtle rounded-3 mt-1 mb-1">{{ message }}</li>
+                <li class="list-group-item bg-{{ category }}-subtle text-light-emphasis border border-light-subtle rounded-3 mb-3">{{ message }}</li>
                 {% endfor %}
             </ul>
             {% endif %}
