--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -58,7 +58,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li><a class="dropdown-item" href="#">general_overview</a></li>
-                    <li><a class="dropdown-item" href="#">manual_exploration</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('data_exploration.manual_exploration')}}">manual_exploration</a></li>
                     <li><a class="dropdown-item" href="#">visual_exploration</a></li>
                 </ul>
             </li>
