--- a/templates/data_selection/import_new_dataset.html
+++ b/templates/data_selection/import_new_dataset.html
@@ -4,6 +4,7 @@
 {% block main_content %}
 
 <form action="#" method="POST" enctype=multipart/form-data>
+
   <div class="mb-3">
     <label for="file_name_new" class="form-label">File name</label>
     <input type="text" class="form-control" name="file_name_new" id="file_name_new" placeholder="Leave empty if you do not wish to change the name of the file. Add the file extension as well.">
@@ -12,15 +13,23 @@
     <label for="file_input" class="form-label">File</label>
     <input type="file" class="form-control" name="file_input" id="file_input" required>
   </div>
-  <div class="mb-3 form-check form-check-inline">
-    <input type="checkbox" class="form-check-input" name="is_new_file_active" id="is_new_file_active" checked>
-    <label class="form-check-label" for="is_new_file_active">Set as active dataset</label>
+
+  <div class="row align-items-center mb-3">
+    <div class="form-check col-auto">
+      <input type="checkbox" class="form-check-input pl-3" name="is_new_file_active" id="is_new_file_active" checked>
+      <label class="form-check-label" for="is_new_file_active">Set as active dataset</label>
+    </div>
+    <div class="form-check col-auto">
+      <input type="checkbox" class="form-check-input" name="new_file_has_header" id="new_file_has_header">
+      <label class="form-check-label" for="new_file_has_header">File has a header</label>
+    </div>
+      <div class="col-auto">
+        <input type="text" class="form-control" name="new_file_separator" id="new_file_separator" placeholder="Separator: Default --> ,">
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Upload file</button>
   </div>
-  <div class="mb-3 form-check form-check-inline">
-    <input type="checkbox" class="form-check-input" name="new_file_has_header" id="new_file_has_header">
-    <label class="form-check-label" for="new_file_has_header">File has a header</label>
-  </div><br/>
-  <button type="submit" class="btn btn-primary">Upload file</button>
+
 </form>
 
 {% endblock %}
