Add df.describe output to general overview

--- a/templates/data_exploration/general_overview.html
+++ b/templates/data_exploration/general_overview.html
@@ -3,6 +3,9 @@
 {% block title %}Data exploration - Manual exploration{% endblock %}
 {% block main_content %}
 
-{{additional_args}}
+{# {{additional_args}} #}
+
+<h3>General overview of the different columns with the type in the first column</h3>
+{% include "table_basic_include.html" %}
 
 {% endblock %}
