Added (buggy) first implementation of visual exploration

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -59,7 +59,7 @@
                     </li>
                     <li><a class="dropdown-item" href="{{ url_for('data_exploration.general_overview')}}">general_overview</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('data_exploration.manual_exploration')}}">manual_exploration</a></li>
-                    <li><a class="dropdown-item" href="#">visual_exploration</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('data_exploration.visual_exploration')}}">visual_exploration</a></li>
                 </ul>
             </li>
 
