--- a/templates/data_exploration/visual_exploration.html
+++ b/templates/data_exploration/visual_exploration.html
@@ -3,6 +3,9 @@
 {% block title %}Data exploration - Visual exploration{% endblock %}
 
 {% block main_content %}
+
+<!-- Inspired by https://github.com/alanjones2/Flask-Plotly/tree/main/plotcallback-gm2 -->
+
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- My js for visual_exploration -->
