--- a/templates/data_exploration/visual_exploration.html
+++ b/templates/data_exploration/visual_exploration.html
@@ -14,14 +14,15 @@
 <form id="graph_form" class="row g-2">
     <div class="col-md-12">
         <label for="graph_type" class="form-label">Graph type</label>
-        <select id="graph_type" class="form-select" onchange="cbb()">
+        <select id="graph_type" class="form-select" onchange="construct_new_graph(); make_column_selects_available();">
             <option selected>Histogram</option>
             <option>Pie Chart</option>
+            <option>Scatter Plot</option>
         </select>
     </div>
     <div class="col-md-6">
         <label for="column_1" class="form-label">Column 1</label>
-        <select id="column_1" class="form-select" onchange="cbb()">
+        <select id="column_1" class="form-select" onchange="construct_new_graph()">
             <option selected>None</option>
             {% for column_name in additional_args[0][0].keys() %}
             <option>{{column_name}}</option>
@@ -30,8 +31,13 @@
     </div>
     <div class="col-md-6">
         <label for="column_2" class="form-label">Column 2</label>
-        <select id="column_2" class="form-select" onchange="cbb()" disabled>
-            <option selected>Currently disabled</option>
+        <select id="column_2" class="form-select" onchange="construct_new_graph()">
+            {# <option selected>Currently disabled</option> #}
+            <option selected>None</option>
+            {% for column_name in additional_args[0][0].keys() %}
+            <option>{{column_name}}</option>
+            {% endfor %}
+            <option hidden>Not available for this graph type</option> <!-- So that js can set it to this -->
         </select>
     </div>
     <div id="chart" class="chart mt-3"></div>
