Added bar charts

--- a/templates/data_exploration/visual_exploration.html
+++ b/templates/data_exploration/visual_exploration.html
@@ -19,6 +19,7 @@
             <option>Histogram</option>
             <option>Pie Chart</option>
             <option>Scatter Plot</option>
+            <option>Bar Chart</option>
         </select>
     </div>
     <div class="col-md-6">
