Added Box Plot and Violin Plot

--- a/templates/data_exploration/visual_exploration.html
+++ b/templates/data_exploration/visual_exploration.html
@@ -20,6 +20,8 @@
             <option>Pie Chart</option>
             <option>Scatter Plot</option>
             <option>Bar Chart</option>
+            <option>Box Plot</option>
+            <option>Violin Plot</option>
         </select>
     </div>
     <div class="col-md-6">
