Added density heatmap

--- a/templates/data_exploration/visual_exploration.html
+++ b/templates/data_exploration/visual_exploration.html
@@ -22,6 +22,7 @@
             <option>Bar Chart</option>
             <option>Box Plot</option>
             <option>Violin Plot</option>
+            <option>Density Heatmap</option>
         </select>
     </div>
     <div class="col-md-6">
