add transpose functionality and fix display table column order bug

--- a/templates/data_preparation_comparison_include.html
+++ b/templates/data_preparation_comparison_include.html
@@ -16,7 +16,7 @@
             <option hidden>Not available for this graph type</option> <!-- So that js can set it to this -->
         </select>
     </div>
-    <div class="col-2">
+    {# <div class="col-2">
         <p class="text-center">count</p>
     </div>
     <div class="col-2">
@@ -33,7 +33,7 @@
     </div>
     <div class="col-2">
         <p class="text-center">max</p>
-    </div>
+    </div> #}
     <div class="col-6">
         <div id="chart_before" class="chart mt-3"></div>
     </div>
