--- a/templates/data_preparation/transpose.html
+++ b/templates/data_preparation/transpose.html
@@ -3,11 +3,17 @@
 {% block title %}Data preparation - Transpose{% endblock %}
 {% block main_content %}
 
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- My js for visual_exploration -->
-<script src="{{ url_for('static', filename='js/data_preparation_comparison_include.js')}}" type="text/javascript"></script>
+<form action="#" method="POST" class="mb-3">
+    <button type="submit" class="btn btn-info mb-3" name="submit_reset" value="true">Show current</button>
+    <button type="submit" class="btn btn-info mb-3" name="submit_preview" value="true">Transpose (preview)</button>
+    <button type="submit" class="btn btn-warning mb-3" name="submit_permanent" value="true">Transpose (permanent)</button>
+</form>
 
-{% include "data_preparation_comparison_include.html" %}
+{% include "table_display_include.html" %}
+
+{% if additional_args[1] %}
+<div id="get_prepared_table"></div>
+{% endif %}
+
 
 {% endblock %}
