--- a/templates/data_preparation/manual_repairing.html
+++ b/templates/data_preparation/manual_repairing.html
@@ -3,6 +3,46 @@
 {% block title %}Data preparation - Manual repairing{% endblock %}
 {% block main_content %}
 
+<form action="#" method="POST" class="mb-3">
+  <div class="row mb-3 g-3 mt-1">
+    <div class="row col-6">
+        <h3>Add row:</h3>
+        {% for column_name in additional_args[0][0].keys() %}
+            <div class="col-4 mt-2">
+                <label for="{{column_name}}" class="form-label">{{column_name}}</label>
+                <input type="text" class="form-control" name="{{column_name}}" id="{{column_name}}" value="{{ request.form[column_name] }}">
+            </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-success m-2 mt-3" name="submit_add_row" value="true">Add row</button>
+    </div>
+    <div class="row col-6">
+        <div class="col-6">
+            <h3>Remove row:</h3>
+            <div class="mt-1">
+                <label for="remove_row" class="form-label">Remove row number:</label>
+                <input type="number" class="form-control" name="remove_row" id="remove_row">
+            </div>
+            <button type="submit" class="btn btn-warning mt-3" name="submit_remove_row" value="true">Remove row number:</button>
+        </div>
+        <div class="col-6">
+            <h3>Remove column:</h3>
+            <div class="mt-1">
+                <label for="remove_column" class="form-label">Capping type</label>
+                <select id="remove_column" name="remove_column" class="form-select">
+                    <option selected>None</option>
+                    {% if additional_args[0] %}
+                        {% for column_name in additional_args[0][0].keys() %}
+                        <option>{{column_name}}</option>
+                        {% endfor %}
+                    {% endif %}
+                </select>
+            </div>
+            <button type="submit" class="btn btn-warning mt-3" name="submit_remove_column" value="true">Remove column:</button>
+        </div>
+    </div>
+  </div>
+</form>
+
 {% include "table_display_include.html" %}
 
 {% endblock %}
